// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`brainAtlas render goldens > detail panel: cerebellum (ACCURACY LOCK — ~80%, not 50%) 1`] = `
{
  "buttons": 18,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 67,
  "sha": "ed54592eb38da2e8",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > detail panel: dopamine (ACCURACY LOCK — no "pleasure chemical" overclaim) 1`] = `
{
  "buttons": 25,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 83,
  "sha": "057452548dedb0f1",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > quiz mode renders a question + options 1`] = `
{
  "buttons": 21,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 67,
  "sha": "1341ee94df5269ee",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: crossLateral renders + pins a digest 1`] = `
{
  "buttons": 24,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 72,
  "sha": "c8546ff22aebb114",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: eegWaves renders + pins a digest 1`] = `
{
  "buttons": 22,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 68,
  "sha": "f06bfa89908e6861",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: inferior renders + pins a digest 1`] = `
{
  "buttons": 25,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 74,
  "sha": "7cc1948d9b9dde2c",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: lateral renders + pins a digest 1`] = `
{
  "buttons": 30,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 85,
  "sha": "dbbbff9979713d77",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: medial renders + pins a digest 1`] = `
{
  "buttons": 29,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 82,
  "sha": "b50848e83bc201eb",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: neuron renders + pins a digest 1`] = `
{
  "buttons": 23,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 79,
  "sha": "9f5cf3e921137dc2",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: neurotransmitters renders + pins a digest 1`] = `
{
  "buttons": 42,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 104,
  "sha": "8ecaba5d267d69f0",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: sleepStages renders + pins a digest 1`] = `
{
  "buttons": 22,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 68,
  "sha": "a0d20181aa93ed8a",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: stimulate renders + pins a digest 1`] = `
{
  "buttons": 21,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 68,
  "sha": "05a46b329a56760c",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: superior renders + pins a digest 1`] = `
{
  "buttons": 22,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 68,
  "sha": "430b042b5852c8e7",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: synapses renders + pins a digest 1`] = `
{
  "buttons": 23,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 70,
  "sha": "e4d45b7704bf55c1",
  "svgs": 1,
}
`;
